--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <TextureView
         android:id="@+id/textureview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
